# Zygisk-Loader

./: README.md  build.gradle  module.gradle  update.json
.github/workflows/: android.yml
gradle/wrapper/: gradle-wrapper.properties
module/: build.gradle
module/rust/: Cargo.toml
module/rust/src/: api.rs  binding.rs  lib.rs  module.rs
module/src/main/: AndroidManifest.xml
zygiskloader/magisk_module/: customize.sh  module.prop
