[package]
name = "zygiskloader"
version = "0.3.3"
edition = "2021"
authors = ["HanSoBored <raihanzxx@gmailcom>"]
description = "Zygisk-Loader Zygisk module with ReZygisk API v5 support"

[dependencies]
bitflags = "1.3.2"
jni = "0.21.0"
log = "0.4.14"
libc = "0.2"

[lib]
name = "zygiskloader"
crate-type = ["dylib"]

[target.'cfg(target_os = "android")'.dependencies]
android_logger = "0.15"

[profile.release]
strip = true      # Menghapus simbol debug (debug symbols)
opt-level = "z"   # Optimasi ukuran biner lebih agresif daripada 's'
lto = true        # Aktifkan Link Time Optimization
codegen-units = 1 # Mengurangi paralelisme untuk optimasi maksimal
panic = "abort"   # Menghapus kode penanganan panik (menghemat ruang)
